--- a/css/style.css
+++ b/css/style.css
@@ -44,30 +44,16 @@ body {
   background-color: #ffffff;
   color: #000000;
 }
-/* nav { 
-     font-weight: bold; 
-     text-align: center; 
-     padding-top: 30px; 
-     padding-bottom: 30px; 
+nav {
+  position: fixed !important;
+  top: 0;
+  width: 100%;
+  z-index: 99;
 }
-
-nav ul {
-     margin: 0;
-     padding: 0;
+.mobile {
+  position: fixed !important;
+  width: 100%;
 }
-
-nav li {
-     width: 175px;
-     height: 61px;
-     display: inline-block;
-}
-
-nav li a{
-     text-transform: uppercase;
-     padding-top: 32px;
-     display: block;
-     text-decoration: none;
-*/
 /* Remove margins and padding from the list, and add a black background color */
 /* Add a black background color to the top navigation */
 .topnav {
@@ -188,7 +174,7 @@ main img {
 main .container {
   position: relative;
   margin: 0 auto;
-  padding: 5px;
+  padding: 15px;
   max-width: 720px;
 }
 main .mySlides {
@@ -203,11 +189,11 @@ main .next {
   position: absolute;
   top: 40%;
   width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
+  padding: 10px;
+  margin-top: -30px;
+  color: #d90600;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 30px;
   border-radius: 0 3px 3px 0;
   user-select: none;
   -webkit-user-select: none;
