--- a/css/style.less
+++ b/css/style.less
@@ -27,30 +27,16 @@ body {
     color: @darkcolor;
 }
 
-/* nav { 
-     font-weight: bold; 
-     text-align: center; 
-     padding-top: 30px; 
-     padding-bottom: 30px; 
+nav {
+    position: fixed !important;
+    top: 0;
+    width: 100%;
+    z-index: 99;
 }
-
-nav ul {
-     margin: 0;
-     padding: 0;
+.mobile {
+    position: fixed !important;
+    width: 100%;
 }
-
-nav li {
-     width: 175px;
-     height: 61px;
-     display: inline-block;
-}
-
-nav li a{
-     text-transform: uppercase;
-     padding-top: 32px;
-     display: block;
-     text-decoration: none;
-*/
 
 /* Remove margins and padding from the list, and add a black background color */
 /* Add a black background color to the top navigation */
@@ -158,6 +144,8 @@ main {
         text-indent: 35px;
     }
 
+  
+
 /* SLIDESHOW CODE */
 * {
   box-sizing: border-box;
@@ -172,7 +160,7 @@ img {
 .container {
   position: relative;
     margin:0 auto;
-    padding: 5px;
+    padding: 15px;
     max-width: 720px;
 }
 
@@ -193,11 +181,11 @@ img {
   position: absolute;
   top: 40%;
   width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
+  padding: 10px;
+  margin-top: -30px;
+  color: @color1;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 30px;
   border-radius: 0 3px 3px 0;
   user-select: none;
   -webkit-user-select: none;
