--- a/css/grid.css
+++ b/css/grid.css
@@ -1,97 +1,24 @@
 /*
 File Name: grid.css
-Date: 07/15/17
+Date: 05/21/18
 Programmer: Sean Ropp
 */
 
 
-/*  SECTIONS  */
-.section {
-    clear: both;
-    margin: 0;
+.img1 { grid-area: header; }
+.img2 { grid-area: header2; }
+
+
+.grid-container {
+    display: inline-grid;
+    grid-template-areas:
+        'header2 header';
+/*    justify-content: space-evenly;
+  grid-gap: 1px;*/
+  background-color: @lightcolor;
+ /* padding: 1px;*/
 }
-
-/*  COLUMN SETUP  */
-.col {
-    display: block;
-    float: left;
-    margin: 1% 0 1% 1%;
-}
-
-.span_1_of_12, .span_2_of_12, .span_3_of_12, .span_4_of_12, .span_5_of_12, 
-.span_6_of_12, .span_7_of_12, .span_8_of_12, .span_9_of_12, .span_10_of_12, 
-.span_11_of_12, .span_12_of_12 {
-    width: 100%;
-}
-
-/*  GROUPING  */
-.group:before, .group:after { 
-    content: "";
-    display: table;
-}
-
-.group:after {
-    clear: both;
-}
-
-.group {
-    zoom: 1; /* For IE 6/7 */
-}
-
-
-/*  GO INTO COLUMNS AT 769 PX OR HIGHER */
-@media only screen and (min-width: 769px) {
-
-    .span_12_of_12 {
-	width: 100%;
-    }
-
-    .span_11_of_12 {
-        width: 91.58%;
-    }
-
-    .span_10_of_12 {
-        width: 83.16%;
-    }
-
-    .span_9_of_12 {
-        width: 74.75%;
-    }
-
-    .span_8_of_12 {
-        width: 66.33%;
-    }
-
-    .span_7_of_12 {
-        width: 57.91%;
-    }
-
-    .span_6_of_12 {
-        width: 49.5%;
-    }
-
-    .span_5_of_12 {
-        width: 41.08%;
-    }
-
-    .span_4_of_12 {
-        width: 32.66%;
-    }
-
-    .span_3_of_12 {
-        width: 24.25%;
-    }
-
-    .span_2_of_12 {
-        width: 15.83%;
-    }
-
-    .span_1_of_12 {
-        width: 7.416%;
-    }
-
-    .col:first-child {
-        margin-left: 0;
-    }
-
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  /*text-align: center;*/
 }
