--- a/css/style.less
+++ b/css/style.less
@@ -60,10 +60,10 @@ nav {
     float: left;
     display: block;
     color: #f2f2f2;
-    text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    /*min-height: 80px;*/
 }
 
 /* Change the color of links on hover */
@@ -82,14 +82,14 @@ nav {
 
 header {
     .img2 {
-        padding-top: 35px;
+        padding-top: 38px;
         min-height: auto;
         max-height: 289px;
         display: inline-grid;
         object-fit: cover;
     }
     .img1 {
-        padding-top: 65px;
+        padding-top: 68px;
         min-height: auto;
         max-height: 289px;
         display: inline-grid;
@@ -111,6 +111,7 @@ h1 {
     
 }
 
+
 main {
     margin-top: 10px;
     margin-left: 12px;
@@ -118,6 +119,14 @@ main {
     margin-bottom: 10px;
     padding-bottom: 1em;
 
+.socialmedia {
+        float: right;
+        text-align: right;
+}
+     .mediafeeds li {
+        list-style-type: none;
+    }
+    
     
     h2 {
         font-size: 2em;
@@ -338,17 +347,38 @@ The following CSS affects all screen sizes larger than 480 pixels wide.
                 display: none;
             }
         }
+    
+    .topnav a.home {
+            text-align: right;
+            padding-top: 25;
+            padding-right: 120px;
+    }
+    .topnav a.faqs {
+            text-align: right;
+            padding-right: 120px;
+    }
+    .topnav a.register {
+            text-align: right;
+            padding-right: 120px;
+    }
+    .topnav a.contact {
+            text-align: right;
+            padding-right: 120px;
+    }
         
     .topnav .img2 {
         float: left;
-        height: 55px;
-        width: auto;
+        height: 65px;
+        padding-bottom: 10px;
+        padding-left: 10px;
     }
 /* When the screen is less than 481 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
         .topnav a:not(:first-child) {display: none;}
-        .topnav a.icon {
+         .topnav a.icon {
             float: right;
             display: block;
+            padding-top: 15px;
+            font-size: 30px;
         }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@@ -361,7 +391,6 @@ The following CSS affects all screen sizes larger than 480 pixels wide.
         .topnav.responsive a {
             float: none;
             display: block;
-            text-align: left;
         }
         
     }
@@ -375,18 +404,21 @@ The following CSS affects all screen sizes larger than 480 pixels wide.
                 display: none;
             }
             
+            .socialmedia {
+                display: none;
+            }
+            
+            table#t01 {
+                font-size: 0.8em;
+            }
+            #gallery01 {
+                display: none;
+            }
+            
         }
-        /*footer {
-            padding-left: 50px;
-            padding-right: 50px;
-            span {
-                display: table;
-                margin: auto;
+            .socialmedia2 {
+                text-align: center;
             }
-            a {
-                display: inline-table;
-            }
-        }*/
         
     }
 
@@ -419,6 +451,10 @@ The following CSS affects all screen sizes larger than 1024 pixels wide.
                 max-width: 350px;
             }
             
+        }
+        
+        .socialmedia2 {
+            display: none;
         }
 
         footer {
